Working on simplot_example

--- a/code/simplot_example.ipynb
+++ b/code/simplot_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# simplot example\n",
+    "# modsim.py examples\n",
     "\n",
     "Code for *Modeling and Simulation in Python*\n",
     "\n",
