--- a/code/chap02.ipynb
+++ b/code/chap02.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reality check"
+    "## Negative bikes"
    ]
   },
   {
@@ -269,6 +269,7 @@
    "outputs": [],
    "source": [
     "def move_bike(state, n):\n",
+    "    # make sure the number of bikes won't go negative\n",
     "    olin = state.olin - n\n",
     "    if olin < 0:\n",
     "        return\n",
@@ -277,6 +278,7 @@
     "    if wellesley < 0:\n",
     "        return\n",
     "    \n",
+    "    # update the state\n",
     "    state.olin = olin\n",
     "    state.wellesley = wellesley"
    ]
@@ -309,16 +311,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Try to access a local variable from outside the function."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'olin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-63-9b71d862c797>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0molin\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'olin' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "olin"
+   ]
   },
   {
    "cell_type": "markdown",
